syntax = "proto3";

option java_multiple_files = true;
option java_package = "org.paul.grpc.participant";

package participant;

service ParticipantService {
  rpc Register(RegisterRequest) returns (RegisterResponse);
  rpc Login(LoginRequest) returns (LoginResponse);
}

message RegisterRequest {
  string name = 1;
  string email = 2;
  string password = 3;
}

message RegisterResponse {
  string message = 2;
  int64 participant_id = 3;
}

message LoginRequest {
  string email = 1;
  string password = 2;
}

message LoginResponse {
  string message = 2;
  int64 participant_id = 3;
  string name = 4;
}
